--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   fpdart: ^1.1.1
   get_it: ^8.0.3
+  go_router: ^15.1.2
   google_fonts: ^6.2.1
   gpt_markdown: ^1.0.18
   hydrated_bloc: ^10.0.0
@@ -26,6 +27,7 @@ dependencies:
   solar_icons: ^0.0.5
   sqflite: ^2.4.2
   typewritertext: ^3.0.9
+  uuid: ^4.5.1
 
 dev_dependencies:
   change_app_package_name: ^1.5.0
