--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_animate: ^4.5.2
   flutter_bloc: ^9.1.1
   flutter_dotenv: ^5.2.1
+  flutter_slidable: ^4.0.0
   fpdart: ^1.1.1
   get_it: ^8.0.3
   go_router: ^15.1.2
@@ -26,7 +27,6 @@ dependencies:
   path_provider: ^2.1.5
   solar_icons: ^0.0.5
   sqflite: ^2.4.2
-  typewritertext: ^3.0.9
   uuid: ^4.5.1
 
 dev_dependencies:
