--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: kanachat
-description: "An Open Source ChatBot Application with GeminiAPI build with Flutter."
+description: "An Open Source ChatBot Application using Google VertexAI build with Flutter."
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
@@ -8,7 +8,8 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.8
-  dio: ^5.8.0+1
+  firebase_core: ^3.13.0
+  firebase_vertexai: ^1.6.0
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.2
@@ -37,8 +38,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  assets:
-    - .env
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
