--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.8
+  desktop_window: ^0.4.2
   firebase_core: ^3.13.0
   firebase_vertexai: ^1.6.0
   flutter:
